--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn Simpele Pagina</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; }
-        h1 { color: #333; }
-    </style>
-</head>
-<body>
-
-    <h1>Welkom op mijn website</h1>
-    <p>Dit is een heel eenvoudige HTML-pagina om mee te beginnen.</p>
-
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Doorverwijzen naar Sioux Electronics...</title>
+    <!-- Directe doorverwijzing -->
+    <meta http-equiv="refresh" content="0; URL=https://www.sioux.eu/competences/electronics/">
+    <!-- SEO: geef aan waar de echte content staat -->
+    <link rel="canonical" href="https://www.sioux.eu/competences/electronics/">
+  </head>
+  <body>
+    <p>U wordt doorverwezen naar Sioux Electronics. <a href="https://sioux.eu">Klik hier</a> als dit niet automatisch gebeurt.</p>
+  </body>
 </html>
