--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="canonical" href="https://www.sioux.eu/competences/electronics/">
   </head>
   <body>
-    <p>U wordt doorverwezen naar Sioux Electronics. <a href="https://sioux.eu">Klik hier</a> als dit niet automatisch gebeurt.</p>
+    <p>U wordt doorverwezen naar Sioux Technologies <a href="https://sioux.eu">Klik hier</a> als dit niet automatisch gebeurt.</p>
   </body>
 </html>
